# GeoPal_Traveling_and_Logistics

./: .gitignore  README.md
ORS_Agent_MCP/: Dockerfile  ors_mcp_langgraph_client.py  ors_mcp_server.py  pyproject.toml  requirements.txt  smithery.yaml  uuid_just.py
frontend/: .prettierignore  .prettierrc  bun.lockb  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/auth/verify-email/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/: api-client.ts  footer.tsx  location-intelligence.tsx  map-interface.tsx  navbar.tsx  reachability-analysis.tsx  route-explorer.tsx  trip-dashboard.tsx  trip-optimization.tsx
frontend/components/auth/: auth-form.tsx  auth-layout.tsx
frontend/components/pricing/: faq-section.tsx  pricing-plans.tsx
frontend/components/ui/: container-text-flip.tsx  flip-words.tsx  icons.tsx  infinite-moving-cards-demo.tsx  infinite-moving-cards.tsx  mcp-features-dropdown.tsx  modal.tsx  resizable-navbar.tsx  toast.tsx
frontend/hooks/: use-auth.ts  useLLM.ts  useMCP.ts
frontend/lib/mcp/: client.ts  llm-client.ts  types.ts
frontend/lib/supabase/: client.ts  test-client.ts
frontend/styles/: globals.css
